@@ -1,3 +1,7 @@
+2013-05-21  Sterling Augustine  <saugustine@google.com>
+
+	* boards/remote-stdio-gdbserver.exp: New file.
+
 2013-05-21  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	PR testsuite/12649
